--- a/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.WindowsDX.csproj
+++ b/Interpreters/ManualInterpreter/MonoGame.QuakeConsole.ManualInterpreter.WindowsDX.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>MonoGame.QuakeConsole.ManualInterpreter.WindowsDX</PackageId>
     <Title>Manual Interpreter for MonoGame Quake-style Console</Title>
-    <Version>2.0.0</Version>
+    <Version>3.0.0</Version>
     <Authors>Jaanus Varus</Authors>
     <Description>Interpreter for executing manually defined commands.</Description>
     <PackageTags>monogame console interpreter manual</PackageTags>
