--- a/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj
+++ b/Interpreters/PythonInterpreter/MonoGame.QuakeConsole.PythonInterpreter.DesktopGL.csproj
@@ -2,11 +2,11 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>MonoGame.QuakeConsole.PythonInterpreter.DesktopGL</PackageId>
     <Title>Python Interpreter for MonoGame Quake-style Console</Title>
-    <Version>2.0.0</Version>
+    <Version>3.0.0</Version>
     <Authors>Jaanus Varus</Authors>
     <Description>Interpreter for executing console commands using a Python engine.</Description>
     <PackageTags>monogame console interpreter ironpython python</PackageTags>
