--- a/Source/MonoGame.QuakeConsole.WindowsDX.csproj
+++ b/Source/MonoGame.QuakeConsole.WindowsDX.csproj
@@ -2,13 +2,13 @@
 
   <PropertyGroup>
     <OutputType>Library</OutputType>
-    <TargetFramework>netcoreapp3.1</TargetFramework>
+    <TargetFramework>net6.0-windows</TargetFramework>
     <DefineConstants>WINDOWSDX</DefineConstants>
     <EnableDefaultEmbeddedResourceItems>false</EnableDefaultEmbeddedResourceItems>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
     <PackageId>MonoGame.QuakeConsole.WindowsDX</PackageId>
     <Title>Quake-style Console for MonoGame</Title>
-    <Version>2.0.0</Version>
+    <Version>3.0.0</Version>
     <Authors>Jaanus Varus</Authors>
     <Description>Quake-style console allowing for in-game user input.</Description>
     <PackageTags>monogame console shell terminal</PackageTags>
@@ -16,8 +16,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.0.1641" />
-    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.0.1641" />
+    <PackageReference Include="MonoGame.Content.Builder.Task" Version="3.8.1.303" />
+    <PackageReference Include="MonoGame.Framework.WindowsDX" Version="3.8.1.303" />
   </ItemGroup>
 
   <ItemGroup>
